add button pricing

--- a/_data/pages/pricing.yml
+++ b/_data/pages/pricing.yml
@@ -1,7 +1,7 @@
 block_1:
   background_image: /assets/images/upload/vietnam.jpg
   button:
-    button: Order Now
+    name: Order Now
     link: 'https://www.jndctranslation.com/contact_us'
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   industries:
@@ -88,6 +88,9 @@ block_2:
       price_2: $360
   title: Save money with bundle offers
   visible: true
+  button:
+    name: Order Now
+    link: /contact_us
 block_3:
   color_overlay: 'rgba(50, 50, 50, 0)'
   items:
