Update Website Pages “legal_page_information”

--- a/_data/pages/legal.yml
+++ b/_data/pages/legal.yml
@@ -4,7 +4,7 @@ block_1:
   text: >-
     As experts in Vietnamese, our certified legal translators and reviewers will
     accurately translate sensitive legal materials into your desired language.
-  title: Expert Translation Services
+  title: Expert Legal Translation Services
   visible: true
 block_2:
   background_image: ''
