Update Website  Common Information “customer_reviews”

--- a/_data/customer_reviews.yml
+++ b/_data/customer_reviews.yml
@@ -6,19 +6,32 @@ customers:
       I used the services of JNDC because of positive reviews from others and
       they did not disappoint. Work was done perfectly, even respecting the
       formatting of my presentation will certainly use again. Thank you 
-  - avatar: /assets/images/upload/avatar.jpg
-    company: New York University
-    name: Peter
-    review: Hello World!
-  - avatar: /assets/images/upload/avatar.jpg
-    company: New York University
-    name: Peter
-    review: Bye bye World!
-  - avatar: /assets/images/upload/avatar.jpg
-    company: New York University
-    name: Peter
-    review: Goodbye World !!
-  - avatar: /assets/images/upload/avatar.jpg
-    company: New York University
-    name: Peter
-    review: Hell Yeahhhh !!
+  - avatar: /assets/images/upload/4152_nsgecqmuop.jpg
+    company: 'https://www.womenshelters.org/'
+    name: 'Jerry '
+    review: >-
+      JNDC is A+++ amazing!!! Awesome communication skills, super easy to work
+      with and they produces extremely fantastic and amazing translations. Thank
+      you so much!!!
+  - avatar: /assets/images/upload/messaggio_m_logo_black_color_300x300.png
+    company: 'https://messaggio.com/'
+    name: Niki Tailin
+    review: >-
+      Whenever we need to get a document, a blog or something else translated,
+      we chose JNDC Translation. The work is very well done and the delivery is
+      very quick. Thank you!
+  - avatar: /assets/images/upload/37354297_965352980316437_1860440903320076288_n.png
+    company: 'https://www.beautymeca.com/'
+    name: Beautymeca
+    review: >-
+      Fantastic! The document was delivered right on time. The quality of the
+      work was great. we are so happy with the work, and we are able to put it
+      to use right away.
+  - avatar: >-
+      /assets/images/upload/co-gai-viet-xinh-dep-va-hanh-trinh-tham-gia-giai-vo-dich-the-gioi-ve-tri-nho-10-090903.jpg
+    company: Queensland University
+    name: Quynh Trinh
+    review: >-
+      Amazing guy to work with. If you need translations in Vietnamese, JNDC is
+      the to-go-to service! Fast delivery, reliable and quality work. Will
+      definately have all my translations done by them in the future!
