Update Website  Common Information “customer_reviews”

--- a/_data/customer_reviews.yml
+++ b/_data/customer_reviews.yml
@@ -32,6 +32,6 @@ customers:
     company: Queensland University
     name: Quynh Trinh
     review: >-
-      Amazing guy to work with. If you need translations in Vietnamese, JNDC is
-      the to-go-to service! Fast delivery, reliable and quality work. Will
-      definately have all my translations done by them in the future!
+      Amazing services to work with. If you need translations in Vietnamese,
+      JNDC is the to-go-to services! Fast delivery, reliable and quality work.
+      Will definately have all my translations done by them in the future!
