Update Website Pages “home_page_information”

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -315,4 +315,4 @@ block_10:
         translation. We believe that these factors play a major role in creating
         a positive for our clients.
       title: 'Services: Building Bridges on the Road to Globalization'
-  visible: true
+  visible: false
