Update Website Pages “legal_page_information”

--- a/_data/pages/legal.yml
+++ b/_data/pages/legal.yml
@@ -3,7 +3,7 @@ block_1:
   color_overlay: 'rgba(50, 50, 50, 0.5)'
   text: >-
     As experts in Vietnamese, our certified legal translators and reviewers will
-    accurately translate sensitive legal materials into your desired language.
+    accurately translate sensitive legal materials into Vietnamese.
   title: Legal Translation Services
   visible: true
 block_2:
