Update Website Pages “customer_support”

--- a/_data/pages/support.yml
+++ b/_data/pages/support.yml
@@ -64,4 +64,4 @@ block_2:
         - title: Do you offer industry expert translation?
         - title: Do you offer website translation/localization services?
       title: Payment
-  visible: true
+  visible: false
