Update Website Pages “contact”

--- a/_data/pages/contact.yml
+++ b/_data/pages/contact.yml
@@ -1,2 +1,3 @@
-background_image: '/assets/images/ui/map.jpg'
+background_image: >-
+  /assets/images/upload/view-of-new-york-brooklyn-bridge-nighht-big-bus-tours.jpg
 color_overlay: 'rgba(50, 50, 50, 0)'
