Update Website Pages “quote”

--- a/_data/pages/quote.yml
+++ b/_data/pages/quote.yml
@@ -1,2 +1,2 @@
-background_image: '/assets/images/ui/instant-quote-banner.png'
+background_image: /assets/images/upload/vietnam.jpg
 color_overlay: 'rgba(50, 50, 50, 0)'
