Update Website Pages “contact”

--- a/_data/pages/contact.yml
+++ b/_data/pages/contact.yml
@@ -1,2 +1,2 @@
-background_image: /assets/images/upload/fusion-suites-danang-beach-01.jpg
+background_image: /assets/images/upload/8.jpg
 color_overlay: 'rgba(50, 50, 50, 0)'
