Update Website Pages “quote”

--- a/_data/pages/quote.yml
+++ b/_data/pages/quote.yml
@@ -1,2 +1,2 @@
-background_image: /assets/images/upload/best-vietnam-nhatrang-12-min.jpg
+background_image: /assets/images/upload/đà-lạt.jpg
 color_overlay: 'rgba(50, 50, 50, 0)'
