--- a/_data/pages/pricing.yml
+++ b/_data/pages/pricing.yml
@@ -44,15 +44,15 @@ block_1:
     - icon: /assets/images/upload/english_us.png
       title: '  English'
     - icon: /assets/images/upload/flag-round-250.png
-      title: Japanese
+      title: '  Japanese'
     - icon: /assets/images/upload/korean.png
-      title: Korean
+      title: '  Korean'
     - icon: /assets/images/upload/chinese.png
-      title: Simplified Chinese
+      title: '  Simplified Chinese'
     - icon: /assets/images/upload/taiwan.png
-      title: Traditional Chinese
+      title: '  Traditional Chinese'
     - icon: /assets/images/upload/vn-01.png
-      title: Vietnamese
+      title: '  Vietnamese'
   targets:
     - icon: /assets/images/upload/english_us.png
       title: '  English'
