Update Website  Common Information “footer”

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
 block_0:
-  title: JNDC Translation Blog
+  title: JNDC Blogs
 block_1:
   items:
     - link: 'https://www.jndctranslation.com/pages/legal'
