Update Website Pages “about_page_information”

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -19,7 +19,7 @@ block_2:
   background_image: ''
   color_overlay: 'rgba(50, 50, 50, 0)'
   text: >-
-    JNDC Translation is a Vietnamese Languages Company. We is a leading in
+    JNDC Translation is a Vietnamese Translation Company. We is a leading in
     providing translation services in the translation marketplace that offers a
     transparent, intuitive and cost-effective online portal to customers who
     need documents, web content and video content translated guaranteeing
